--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,12 +1,12 @@
 # Static library name
-NAME		= ex01
+NAME		= RPN
 
 # Compiler and flags
 CXX			= c++
 CXXFLAGS	= -Wall -Wextra -Werror -std=c++98
 
 # Directories and files
-SRC			= main.cpp
+SRC			= main.cpp source/RPN.cpp
 OBJ			= $(SRC:.cpp=.o)
 
 all:	$(NAME)
